XRDevice should not extend EventTarget.

The spec removed any events that were fired on the XRDevice a while ago,
but our implementation forgot to clean this up.

Bug: 859706
Change-Id: I086813a5a2cbf6ebbf7faf576b066fa3957ad5dc
Reviewed-on: https://chromium-review.googlesource.com/1123645
Reviewed-by: Brian Sheedy <bsheedy@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Commit-Queue: Brandon Jones <bajones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573048}
Former-commit-id: 0c6f1ba1efc8e439a0c4290bd83454d0427c27c0