third_party/blink/renderer/core/html/canvas/canvas_context_creation_attributes_core.h
@@ -6,7 +6,7 @@
 #define THIRD_PARTY_BLINK_RENDERER_CORE_HTML_CANVAS_CANVAS_CONTEXT_CREATION_ATTRIBUTES_CORE_H_
 
 #include "third_party/blink/renderer/core/core_export.h"
-#include "third_party/blink/renderer/core/dom/events/event_target.h"
+#include "third_party/blink/renderer/platform/bindings/script_wrappable.h"
 #include "third_party/blink/renderer/platform/heap/handle.h"
 #include "third_party/blink/renderer/platform/wtf/text/wtf_string.h"
 
@@ -33,7 +33,7 @@ class CORE_EXPORT CanvasContextCreationAttributesCore {
   bool stencil = false;
 
   // This attribute is of type XRDevice, defined in modules/xr/XRDevice.h
-  Member<EventTargetWithInlineData> compatible_xr_device;
+  Member<ScriptWrappable> compatible_xr_device;
 
   void Trace(blink::Visitor*);
 };
